# mkapartner.ru

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  nginx.conf  pyproject.toml  requirements.txt  requrements.txt
.run/: manage.run.xml
advo_site/: settings.py
app/: manage.py  pytest.ini
app/advo_site/: asgi.py  settings.py  urls.py  wsgi.py
app/homeapp/: admin.py  apps.py  forms.py  models.py  sitemaps.py  urls.py  views.py
app/homeapp/migrations/: 0001_initial.py  0002_alter_partner_options_partner_my_order.py  0003_partnerphoto.py  0004_delete_consultation.py  0005_delete_worker.py  0006_remove_partner_work_place_and_more.py  0007_alter_practicecategory_options_news_video_link_and_more.py  0008_alter_news_text.py  0009_practiceinstance_partner.py  0010_review_alter_practiceinstance_partner.py  0012_client.py  0013_article_video.py  (+13 more)
homeapp/: admin.py  models.py  notification_bot.py  search.py.save  urls.py  views.py
homeapp/migrations/: 0001_initial.py  0002_alter_partner_options_partner_my_order.py  0002_news_alter_worker_resume.py  0002_partner_work_place.py  0003_consultation_question_and_more.py  0003_partner.py  0003_partnerphoto.py  0004_practicecategory_practiceinstance_and_more.py  0005_practiceinstance_category.py  0006_alter_practicecategory_image.py  0007_practiceinstance_verdict_url.py
media/resume/: chumachenko-andrej-jurevich.doc  kuzmenko-arsenij-jurevich.docx  timerhanova-alina-anvarovna.doc  tokareva-olga-viktorovna.docx
staff/migrations/: 0001_initial.py
(+203 files in other folders)
